--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!doctype html>
-<html lang="en" ng-app="studentSignIn">
+<html lang="en" ng-app="zipCodeApp">
 
 <head>
     <meta charset="UTF-8">
-    <title>STUDENT SIGN-IN</title>
+    <title>ZIP IT</title>
     <script src="lib/angular.js"></script>
     <script src="lib/angular-ui-router.js"></script>
     <script src="app.js"></script>
-    <script src="controllers/StudentsController.js"></script>
-    <script src="controllers/StatusController.js"></script>
-    <script src="services/StudentsFactory.js"></script>
+    <!-- // <script src="controllers/StudentsController.js"></script> -->
+    <!-- // <script src="controllers/StatusController.js"></script> -->
+    <!-- // <script src="services/StudentsFactory.js"></script> -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
 
