--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <script src="lib/angular.js"></script>
     <script src="lib/angular-ui-router.js"></script>
     <script src="app.js"></script>
-    <!-- // <script src="controllers/StudentsController.js"></script> -->
-    <!-- // <script src="controllers/StatusController.js"></script> -->
-    <!-- // <script src="services/StudentsFactory.js"></script> -->
+    <script src="controllers/ZipCodeController.js"></script>
+    <script src="services/ZipCodeFactory.js"></script>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
 
