--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="lib/angular.js"></script>
     <script src="lib/angular-ui-router.js"></script>
     <script src="app.js"></script>
+    <script src="lib/papaparse.min.js"></script>
     <script src="controllers/ZipCodesController.js"></script>
     <script src="services/ZipCodesFactory.js"></script>
     <link rel="stylesheet" href="css/bootstrap.min.css">
