--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>ZIP IT</title>
     <script src="lib/angular.js"></script>
     <script src="lib/angular-ui-router.js"></script>
+    <script src="lib/jquery-1.11.3.js"></script>
     <script src="app.js"></script>
     <script src="lib/papaparse.min.js"></script>
     <script src="controllers/ZipCodesController.js"></script>
