add zip & population json files

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- <!doctype html>
+<!doctype html>
 <html lang="en" ng-app="zipCodeApp">
 
 <head>
@@ -6,11 +6,10 @@
     <title>ZIP IT</title>
     <script src="lib/angular.js"></script>
     <script src="lib/angular-ui-router.js"></script>
+    <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
     <script src="lib/jquery-1.11.3.js"></script>
     <script src="app.js"></script>
-    <script src="lib/papaparse.min.js"></script>
     <script src="controllers/ZipCodesController.js"></script>
-    <script src="services/ZipCodesFactory.js"></script>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
 
@@ -22,11 +21,11 @@
     </div>
 </body>
 
-</html> -->
+</html>
 
 
 
-<html>
+<!-- <html>
   <head>
     <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
     <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
@@ -46,4 +45,4 @@
       });
     </script>
   </body>
-</html>
+</html> -->
