--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <title>ZIP IT</title>
-    <script src="lib/angular.js"></script>
+    <!-- Angular -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
     <script src="lib/angular-ui-router.js"></script>
-    <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
+
+    <!-- Firebase -->
+    <script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
+
+    <!-- AngularFire -->
+    <script src="https://cdn.firebase.com/libs/angularfire/1.1.3/angularfire.min.js"></script>
     <script src="lib/jquery-1.11.3.js"></script>
     <script src="app.js"></script>
     <script src="controllers/ZipCodesController.js"></script>
@@ -22,27 +28,3 @@
 </body>
 
 </html>
-
-
-
-<!-- <html>
-  <head>
-    <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
-    <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
-  </head>
-  <body>
-    <input type='text' id='nameInput' placeholder='Name'>
-    <input type='text' id='messageInput' placeholder='Message'>
-    <script>
-      var myDataRef = new Firebase('https://kshj17qyrg1.firebaseio-demo.com/');
-      $('#messageInput').keypress(function (e) {
-        if (e.keyCode == 13) {
-          var name = $('#nameInput').val();
-          var text = $('#messageInput').val();
-          myDataRef.set({name: name, text: text});
-          $('#messageInput').val('');
-        }
-      });
-    </script>
-  </body>
-</html> -->
