migrate allZipCodes to factory

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="lib/jquery-1.11.3.js"></script>
     <script src="app.js"></script>
     <script src="controllers/ZipCodesController.js"></script>
+    <script src="services/ZipCodesFactory.js"></script>
     <link rel="stylesheet" href="css/bootstrap.min.css">
 
 </head>
