--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <script src="app.js"></script>
         <script src="controllers/ZipCodesController.js"></script>
         <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/styles.css">
 
     </head>
 
