--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <script src="controllers/ZipCodesController.js"></script>
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/styles.css">
+        <script src="lib/utility.js"></script>
 
     </head>
 
